src/themes/theme-fusion.css
:root {
  --radius: 0.625rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.145 0 0);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.145 0 0);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.145 0 0);
  --primary: oklch(0.5512 0.278 293.98);
  --primary-foreground: oklch(0.985 0 0);
  --secondary: oklch(0.97 0 0);
  --secondary-foreground: oklch(0.205 0 0);
  --muted: oklch(0.97 0 0);
  --muted-foreground: oklch(0.556 0 0);
  --accent: oklch(0.97 0 0);
  --accent-foreground: oklch(0.205 0 0);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.922 0 0);
  --input: oklch(0.922 0 0);
  --ring: oklch(0.5512 0.278 293.98);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.145 0 0);
  --sidebar-primary: oklch(0.5512 0.278 293.98);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.97 0 0);
  --sidebar-accent-foreground: oklch(0.205 0 0);
  --sidebar-border: oklch(0.922 0 0);
  --sidebar-ring: oklch(0.5512 0.278 293.98);
}

.dark {
  --background: oklch(0.1615 0.0151 253.14);
  --foreground: oklch(0.9842 0.0034 247.86);
  --card: oklch(0.2154 0.0141 253.13);
  --card-foreground: oklch(0.9842 0.0034 247.86);
  --popover: oklch(0.2154 0.0141 253.13);
  --popover-foreground: oklch(0.9842 0.0034 247.86);
  --primary: oklch(0.5512 0.278 293.98);
  --primary-foreground: oklch(0.9842 0.0034 247.86);
  --secondary: oklch(0.2749 0.0353 258.91);
  --secondary-foreground: oklch(0.9842 0.0034 247.86);
  --muted: oklch(0.2749 0.0353 258.91);
  --muted-foreground: oklch(0.7107 0.0351 256.79);
  --accent: oklch(0.3385 0.0503 252.55);
  --accent-foreground: oklch(0.9842 0.0034 247.86);
  --destructive: oklch(0.5878 0.1848 28.98);
  --destructive-foreground: oklch(0.985 0 0);
  --border: oklch(0.312 0.0211 258.37);
  --input: oklch(0.28 0.0369 259.97);
  --ring: oklch(0.312 0.0211 258.37);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.205 0 0);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.488 0.243 264.376);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.269 0 0);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.556 0 0);
}

